kubernetes/signoz/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: signoz
  namespace: signoz
spec:
  hostnames:
    - signoz.k8s.weinbender.io
  parentRefs:
    - kind: Gateway
      name: cluster-gateway
      namespace: envoy-gateway-system
      group: gateway.networking.k8s.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - kind: Service
          name: signoz
          namespace: signoz
          port: 8080
          group: ""
          weight: 1
